--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p style="color: white;">Your ultimate partner for safe and convenient travel. Discover our exceptional 
                 services and let's take you on a journey that exceeds your expectations</p>
             <!--login-btn-->
-            <a href="#" class="main-login" style="border-radius: 10px;">BECOME A MEMBER</a>
+            <a href="./login.php" class="main-login" style="border-radius: 10px;">BECOME A MEMBER</a>
             </div>
             <!--img-->
             <div class="home-img" style="width: 500px;">
@@ -90,27 +90,27 @@
         <div class="box-container" id="box-container">
           <!--box-1-------->
           <div class="box">
-              <img src="images/loan.jpg">
-              <font>Loan Application</font>
-              <p>We give our members loans according to their savings</p>
+              <img src="images/logo.png">
+              <font>lOREM</font>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, odio!</p>
               <!--btn--------->
-              <a href="./login.php">Apply Now!</a>
+              <a href="./login.php">Lorem, ipsum.!</a>
           </div>
           <!--box-2-------->
           <div class="box">
-              <img src="images/savings.png">
-              <font>Savings</font>
-              <p>We allow members to save money with interest of 5% P.M</p>
+              <img src="images/logo.png">
+              <font>lOREM</font>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid, aspernatur?</p>
               <!--btn--------->
-              <a href="./login.php">Save Now!</a>
+              <a href="./login.php">lOREM!</a>
           </div>
           <!--box-3-------->
           <div class="box">
-              <img src="images/ticket.jpg">
-              <font>Ticket Booking</font>
-              <p>You can now get your ticket now remotely </p>
+              <img src="images/logo.png">
+              <font>Lorem.</font>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, quo!</p>
               <!--btn--------->
-              <a href="#">Purchase Now</a>
+              <a href="#">Lorem</a>
           </div>
           <!--box-4-------->
           <div class="box">
